--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
 </head>
 <body>
     <img src="DNIS.jpg" class="final-image" id="finalImage">
-    <audio id="screamSound" src="strashnye-zvuki-dyavolskiy-smeh.mp3"></audio>
+    <audio id="screamSound" src="dnis.mp3"></audio>
     <div id="camera-container">
         <video id="camera" autoplay playsinline></video>
     </div>
