--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
             </div>
         </div>
         <div class="messages-container" id="messages">
-            <!-- Сообщения будут добавляться здесь -->
+            <!-- Убрано приветственное сообщение -->
         </div>
         <div class="typing-indicator" id="typing">Леночка печатает...</div>
         <div class="input-container">
@@ -143,10 +143,8 @@
                 messages.forEach(msg => {
                     addMessage(msg.text, msg.isSent, false);
                 });
-            } else {
-                // Добавляем приветственное сообщение только если нет сохраненных сообщений
-                addMessage('Привет! Я Леночка 😊', false, true);
             }
+            // Убрано добавление приветственного сообщения
         }
 
         // Сохраняем сообщение в localStorage
